[tool.poetry]
name = "mkuser"
version = "2.1.0"
description = "`mkuser` is a simple tool to allow for the easy creation of users on a tilde style server."
authors = ["Andrew Williams <andy@tensixtyone.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.scripts]
mkuser = 'mkuser.cli:main'

[tool.poetry.dependencies]
python = "^3.9"
pyyaml = "^6.0.1"

[tool.poetry.group.test.dependencies]
ruff = "^0.5.0"
pytest = "^8.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
lint.ignore = ["E501"]
