[project]
name = "mkuser"
version = "2.1.1"
description = "`mkuser` is a simple tool to allow for the easy creation of users on a tilde style server."
license = "MIT"
readme = "README.md"
requires-python = ">=3.9"
dependencies = ["pyyaml>=6.0.2"]

[dependency-groups]
dev = ["pytest>=8.4.1", "ruff>=0.12.9"]
[project.scripts]
mkuser = 'mkuser.cli:main'

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
