[metadata]
name = mkuser
version = attr: mkuser.__version__
description = mkuser is a simple tool to allow for the easy creation of users on a tilde style server.
long_description = file: README.md, LICENSE
license = MIT
license_file = LICENSE
classifiers =
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.8

[options]
zip_safe = True
packages = mkuser
install_requires =
    pyyaml

[options.entry_points]
console_scripts =
    mkuser = mkuser.cli:main

[flake8]
format = wemake
ignore = E501
max-line-length = 100
exclude = setup.py

[darglint]
docstring_style=sphinx